--- a/src/i18n/en.default.json
+++ b/src/i18n/en.default.json
@@ -28,6 +28,7 @@
     "ALTITUDE M": "ALTITUDE M",
     "GRADIENT %": "GRADIENT %",
     "HEART RATE BPM": "HEART RATE BPM",
+    "CADENCE RPM": "CADENCE RPM",
     "DURATION": "DURATION",
     "TIME": "TIME",
     "Do You Want Restore Pending Track?": "Do You Want Restore Pending Track?",
@@ -59,9 +60,11 @@
     "SITE": "SITE",
     "LICENSE": "LICENSE",
     "SCAN HEART RATE DEVICES": "SCAN HEART RATE DEVICES",
+    "SCAN CADENCE DEVICES": "SCAN CADENCE DEVICES",
     "START SCAN": "START SCAN",
     "STOP SCAN": "STOP SCAN",
     "HEART RATE DEVICE": "HEART RATE DEVICE",
+    "CADENCE DEVICE": "CADENCE DEVICE",
     "SCAN": "SCAN",
     "DISCONNECT": "DISCONNECT",
     "Shop a supported device (Amazon Associates Links)": "Shop a supported device (Amazon Associates Links)",
