--- a/App_Resources/Android/src/main/res/values-it/strings.xml
+++ b/App_Resources/Android/src/main/res/values-it/strings.xml
@@ -17,9 +17,11 @@
   <string name="_Shop_a_supported_device__Amazon_Associates_Links__ZBtTL0">"Acquista Dispositivo (Affiliazione Amazon)"</string>
   <string name="DISCONNECT">"DISCONNETTI"</string>
   <string name="SCAN">"RICERCA"</string>
+  <string name="_CADENCE_DEVICE_OKuYj">"CADENZIMETRO"</string>
   <string name="_HEART_RATE_DEVICE_1CbL8z">"CARDIOFREQUENZIMETRO"</string>
   <string name="_STOP_SCAN_6I6ip">"TERMINA RICERCA"</string>
   <string name="_START_SCAN_Z1jDRnq">"AVVIO RICERCA"</string>
+  <string name="_SCAN_CADENCE_DEVICES_Z1Bpx7y">"CERCA CADENZIMETRI"</string>
   <string name="_SCAN_HEART_RATE_DEVICES_Z1Jl2Xi">"CERCA CARDIOFREQUENZIMETRI"</string>
   <string name="LICENSE">"LICENZA"</string>
   <string name="SITE">"SITO"</string>
@@ -51,6 +53,7 @@
   <string name="_Do_You_Want_Restore_Pending_Track__Z2jmo1n">"Vuoi Ripristinare Sessione Pendente?"</string>
   <string name="TIME">"ORARIO"</string>
   <string name="DURATION">"DURATA"</string>
+  <string name="_CADENCE_RPM_ZdFqO2">"PEDALATE AL MINUTO"</string>
   <string name="_HEART_RATE_BPM_2aENmS">"BATTITI AL MINUTO"</string>
   <string name="_GRADIENT___RsINH">"PENDENZA %%"</string>
   <string name="_ALTITUDE_M_Z13DHD0">"ALTITUDINE M"</string>
