--- a/src/i18n/en.default.json
+++ b/src/i18n/en.default.json
@@ -68,6 +68,12 @@
     "SCAN CADENCE DEVICES": "SCAN CADENCE DEVICES",
     "START SCAN": "START SCAN",
     "STOP SCAN": "STOP SCAN",
+    "CONNECTED": "CONNECTED",
+    "DICONNECTED": "DICONNECTED",
+    "NOTIFYING": "NOTIFYING",
+    "ERROR": "ERROR",
+    "CADENCE COUNTER": "CADENCE COUNTER",
+    "DEVICE STATUS": "DEVICE STATUS",
     "HEART RATE DEVICE": "HEART RATE DEVICE",
     "CADENCE DEVICE": "CADENCE DEVICE",
     "SCAN": "SCAN",
@@ -88,7 +94,7 @@
     "one minute": "one minute",
     "%s minutes": "%s minutes",
     "no tracks backuped": "no tracks backuped",
-    "%s tracks backuped": "%s tracks backuped",
+    "%s tracks backuped, %s skipped": "%s tracks backuped, %s skipped",
     "no tracks restored": "no tracks restored",
     "%s tracks restored": "%s tracks restored",
     "error on tracks backup: %s": "error on tracks backup: %s",
