--- a/App_Resources/Android/src/main/res/values/strings.xml
+++ b/App_Resources/Android/src/main/res/values/strings.xml
@@ -96,4 +96,11 @@
   <string name="_app_name_1k3Sbz">"Bike Tracking"</string>
   <string name="app_name">"Bike Tracking"</string>
   <string name="title_activity_kimera">"Bike Tracking"</string>
+  <string name="__s_tracks_backuped___s_skipped_2k16HN">"%1$s tracks backuped, %2$s skipped"</string>
+  <string name="_DEVICE_STATUS_tkNnT">"DEVICE STATUS"</string>
+  <string name="_CADENCE_COUNTER_ZkP2US">"CADENCE COUNTER"</string>
+  <string name="ERROR">"ERROR"</string>
+  <string name="NOTIFYING">"NOTIFYING"</string>
+  <string name="DICONNECTED">"DICONNECTED"</string>
+  <string name="CONNECTED">"CONNECTED"</string>
 </resources>
